2007-10-18  Martin Leidig  <mleidig@schlund.de>

	Added support for maven repository deployment to build process. The new
	task 'mvn-install' can be used to install the Pustefix distribution artifacts
	in the local maven repository, the taks 'mvn-deploy' deploys them to a
	remote repository via ssh. The remote repository location has to be configured
	using the build properties remote.repository.host, remote.repository.user,
	remote.repository.path.

	Added:
	* pom.xml
	* build-maven.xml
	* lib/maven-ant-tasks-2.0.7.jar

	Changed:
	* build.xml: Import build-maven.xml

2007-10-16  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/AbstractXMLServlet.java: Make maximum number of stored
	DOMs configurable because the default of 5 isn't enough for applications which
	are using a lot of frames (which can lead to strange behaviour if the frames
	require the same DOM but the business logic creates different DOMs on subsequent
	calls) 

2007-10-09  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java: Check if server 
	context is null and throw according exception	

2007-10-05  Martin Leidig  <mleidig@schlund.de>

	Removed instantiation of custom JMX server for registering Pustefix MBeans
	and use platform server instead. Splitted the single MBean into multiple
	MBeans according to the responsibilities.

	Removed the complete jmx package (some of the non-JMX specific stuff
	was moved to other packages):
	* src/de/schlund/pfixxml/jmx
	* src/de/schlund/pfixxml/jmx/ApplicationList.java
	* src/de/schlund/pfixxml/jmx/Application.java
	* src/de/schlund/pfixxml/jmx/Environment.java
	* src/de/schlund/pfixxml/jmx/JMXConnectionListener.java
	* src/de/schlund/pfixxml/jmx/JmxServer.java
	* src/de/schlund/pfixxml/jmx/JmxPortServlet.java
	* src/de/schlund/pfixxml/jmx/JmxServerMBean.java
	* src/de/schlund/pfixxml/jmx/TrailLogger.java
	* src/de/schlund/pfixxml/jmx/JmxServerFactory.java